# mirroraudioc-

./: README.md
.github/workflows/: build.yml
core/: CMakeLists.txt
core/src/: AudioEngine.cpp  AudioEngine.h  IPC.cpp  IPC.h  WinUtils.h  entry_win.cpp  main.cpp
ui/: AppContext.cs  CoreHost.cs  MirrorAudio.UI.csproj  Program.cs  SettingsForm.Designer.cs  SettingsForm.cs
